# WakeMod

./: .gitignore  .gitmodules  README.md
fw/: .gdbinit  .mxproject  CMakeLists.txt  LICENSE.md  STM32U031xx_FLASH.ld  STM32U031xx_RAM.ld  justfile  wake-mod-firmware.ioc
fw/Core/Inc/: main.h  stm32u0xx_hal_conf.h  stm32u0xx_it.h  utils.h
fw/Core/Src/: i2c_slave.c  main.c  stm32u0xx_hal_msp.c  stm32u0xx_it.c  utils.c
fw/Drivers/logging/: CMakeLists.txt  README.org  logging.c  logging.h  ulog_port.h
fw/Drivers/logging/ulog/: CMakeLists.txt  ulog.c  ulog.h
fw/Drivers/ook/: CMakeLists.txt  ook.c  ook.h
fw/cmake/: gcc-arm-none-eabi.cmake
fw/cmake/stm32cubemx/: CMakeLists.txt
hw/: connector.kicad_sch  mcu.kicad_sch  wake-mod.kicad_pcb  wake-mod.kicad_pro  wake-mod.kicad_sch  wur.kicad_sch
